--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,9 +2,9 @@
 	"compilerOptions": {
 		"baseUrl": "./src",
 		"paths": {
-			"@components/*": ["components/*"],
-			"@pages/*": ["pages/*"],
-			"@styles/*": ["styles/*"]
+			"@components/*": ["/components/*"],
+			"@pages/*": ["/pages/*"],
+			"@styles/*": ["/styles/*"]
 		}
 	}
 }
